--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <tr>
                 <td style="text-align:center;">১</td>
                 <td style="">আব্দুল হক ওরফে ফালানী</td>
-                <td style="text-align:center;">পুত্র</td>
+                <td style="text-align:center;">ভাতিজা</td>
                 <td style="text-align:center;">-</td>
             </tr>
             <tr>
